--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,14 @@
     <button type="submit">Add Cover</button>
   </form>
 
+  <div id="logs-container"
+    style="display: none;"
+  >
+    <div id="foreground">
+      <h2>Logs</h2>
+      <pre id="logs"></pre>
+    </div>
+  </div>
 
   <script src="renderer.js"></script>
 </body>
