✏️ : adjust tiny things

--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,7 @@
     <button type="submit">Add Cover</button>
   </form>
 
-  <div id="logs-container"
-    style="display: none;"
-  >
+  <div id="logs-container">
     <div id="foreground">
       <h2>Logs</h2>
       <pre id="logs"></pre>
